--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
-pydantic==2.9.2
-numpy==1.26.4
-pandas==2.2.2
-scikit-learn==1.6.1
-joblib==1.4.2
+fastapi
+uvicorn
+pydantic
+pandas
+scikit-learn
+joblib
+starlette
